RESOLVED FIXED106284
REGRESSION(r135836): Invalid user input for input[type=number] should be cleared by input.value=""
https://bugs.webkit.org/show_bug.cgi?id=106284
Summary REGRESSION(r135836): Invalid user input for input[type=number] should be clea...
Kent Tamura
Reported 2013-01-07 18:14:32 PST
REGRESSION(r135836): Invalid user input for input[type=number] should be cleared by input.value=""
Attachments
Patch (5.28 KB, patch)
2013-01-07 18:23 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2013-01-07 18:23:52 PST
WebKit Review Bot
Comment 2 2013-01-08 20:19:09 PST
Comment on attachment 181618 [details] Patch Clearing flags on attachment: 181618 Committed r139151: <http://trac.webkit.org/changeset/139151>
WebKit Review Bot
Comment 3 2013-01-08 20:19:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.